--- a/index.html
+++ b/index.html
@@ -673,7 +673,49 @@ function paintTimer(){
   if(state.timeLeft <= 0) timerText.classList.add("timeOut");
 }
 
+/*************************************************
+ * AUDIO (Web Audio API) — single-file, no assets
+ *************************************************/
+let audioCtx;
+function getAudioCtx(){
+  if(!audioCtx){ audioCtx = new (window.AudioContext || window.webkitAudioContext)(); }
+  return audioCtx;
+}
+function beep({freq=440, duration=0.12, type="sine", gain=0.12}){
+  const ctx = getAudioCtx();
+  const o = ctx.createOscillator();
+  const g = ctx.createGain();
+  o.type = type;
+  o.frequency.value = freq;
+  g.gain.value = gain;
+  o.connect(g); g.connect(ctx.destination);
+  o.start();
+  o.stop(ctx.currentTime + duration);
+}
+function soundCorrect(){
+  beep({freq:880, duration:0.09, gain:0.14});
+  setTimeout(() => beep({freq:1175, duration:0.12, gain:0.14}), 90);
+}
+function soundWrong(){
+  beep({freq:220, duration:0.18, type:"square", gain:0.12});
+}
+function soundTick(){
+  beep({freq:1000, duration:0.03, type:"square", gain:0.05});
+}
+
 function startTimer(){
+  stopTimer();
+  state.timeLeft = state.secondsPerQ;
+  paintTimer();
+  state.timerId = setInterval(() => {
+    state.timeLeft -= 1;
+    soundTick();
+    paintTimer();
+    if(state.timeLeft <= 0) timeUp();
+  }, 1000);
+}
+
+function _old_startTimer(){
   stopTimer();
   state.timeLeft = state.secondsPerQ;
   paintTimer();
@@ -737,14 +779,17 @@ function onAnswer(note){
     state.score += bonus;
     state.streak += 1;
     updateHUD();
+
     statusText.textContent = `✅ Correct: ${pretty(correct)} (+${bonus})`;
     showGood("Correct!", `Yes — ${pretty(correct)}.`);
+    soundCorrect();
   } else {
     state.score = Math.max(0, state.score - 4);
     state.streak = 0;
     updateHUD();
     statusText.textContent = `❌ Wrong: you picked ${pretty(note)}.`;
     showBad("Wrong!", `Correct was ${pretty(correct)}.`);
+    soundWrong();
   }
 
   state.qNum += 1;
@@ -767,6 +812,7 @@ function timeUp(){
   paintTimer();
 
   statusText.textContent = "⏱️ Time up!";
+  soundWrong();
   showBad("Time!", correct ? `Correct was ${pretty(correct)}.` : "Try the next one…");
 
   state.qNum += 1;
